message search: compact date representation

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -568,7 +568,7 @@ Vue.component('search', {
 								>{{ tag }}</span>
 							{{ res.subject }}
 						</td>
-						<td>{{ res.date }}</td>
+						<td>{{ format_time(res.timestamp) }}</td>
 					</tr>
 				</table>
 			</div>
