--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -115,7 +115,8 @@ td.subject > span,
 	font-size: large;
 	color: #bbb;
 }
-.unread-marker.unread {
+.unread-marker.unread,
+.unread .unread-marker {
 	color: var(--unread);
 }
 
@@ -562,9 +563,12 @@ Vue.component('search', {
 					<tr
 						v-for="res in results.threads"
 						:key="res.thread_id"
-						:class="{ highlight: 'thread:' + res.thread_id == highlight }"
+						:class="{
+							highlight: 'thread:' + res.thread_id == highlight,
+							unread: res.tags.indexOf('unread') != -1,
+						 }"
 						@click="goto_thread(res.thread_id)">
-						<td :class="{ 'unread-marker': true, 'unread': res.tags.indexOf('unread') != -1}">•</td>
+						<td :class="{ 'unread-marker': true }">•</td>
 						<td>{{ res.authors }}</td>
 						<td class="subject">
 							<span
@@ -584,9 +588,12 @@ Vue.component('search', {
 					<tr
 						v-for="res in results.messages"
 						:key="res.thread_id"
-						:class="{ highlight: 'mid:' + res.message_id == highlight }"
+						:class="{
+							highlight: 'mid:' + res.message_id == highlight,
+							unread: res.tags.indexOf('unread') != -1,
+						}"
 						@click="goto_message(res.message_id)">
-						<td :class="{ 'unread-marker': true, 'unread': res.tags.indexOf('unread') != -1}">•</td>
+						<td :class="{ 'unread-marker': true }">•</td>
 						<td>{{ res.from_name_addr[0] || res.from_name_addr[1] }}</td>
 						<td class="subject">
 							<span
