make unread messages a bit… err, a lot more prominent

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -42,6 +42,12 @@ tr {
 tr:nth-child(2n+1) {
 	background-color: #eee;
 }
+tr.unread {
+	background-color: #fcb;
+}
+tr.unread:nth-child(2n+1) {
+	background-color: #eba;
+}
 tr.highlight {
 	background-color: #fe5;
 }
