turns out CSS rules do not, well, cascade to :nth-child elements if they were styled with a dedicated rule

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -48,7 +48,8 @@ tr.unread {
 tr.unread:nth-child(2n+1) {
 	background-color: #eba;
 }
-tr.highlight {
+tr.highlight,
+tr.highlight:nth-child(2n+1) {
 	background-color: #fe5;
 }
 td {
