use escape key to leave the input mode

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -664,6 +664,10 @@ let NetViel = Vue.component('netviel', {
 
 			if(document.activeElement == this.$refs.query) {
 				// input mode
+				if(key == 'escape') {
+					document.activeElement.blur();
+					ev.preventDefault();
+				}
 				return;
 			}
 
