red background sucks, use red color for unread messages instead

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -43,10 +43,7 @@ tr:nth-child(2n+1) {
 	background-color: #eee;
 }
 tr.unread {
-	background-color: #fcb;
-}
-tr.unread:nth-child(2n+1) {
-	background-color: #eba;
+	color: var(--unread);
 }
 tr.highlight,
 tr.highlight:nth-child(2n+1) {
