--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -85,9 +85,15 @@ td.subject > span,
 	display: grid;
 	grid-template-columns: min-content auto;
 }
-.results .pager {
+.results .pager,
+.results .status {
 	grid-row: 1;
 	grid-column: 1 / span 2;
+}
+.results .status {
+	font-size: large;
+	font-weight: bold;
+	text-align: center;
 }
 .results .tags,
 .results table {
@@ -650,6 +656,9 @@ Vue.component('search', {
 	},
 	template: `
 			<div class="results">
+				<div class="status" v-if="!results">Loading...</div>
+				<div class="status" v-if="results && !((what == 'threads' && results.threads.length) || (what == 'messages' && results.messages.length))">No messages found</div>
+
 				<div class="pager" v-if="results && results.pages > 1">
 					<span
 						v-for="i in results.pages"
