--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -494,7 +494,7 @@ Vue.component('search', {
 				}
 				let id = thread_query.replace(/^thread:/, '');
 
-				for(let t of this.results.threads) {
+				for(let t of this.results.items) {
 					if(t.id == id) {
 						t.tags = tags;
 						return;
@@ -509,7 +509,7 @@ Vue.component('search', {
 				}
 				let id = thread_query.replace(/^mid:/, '');
 
-				for(let m of this.results.messages) {
+				for(let m of this.results.items) {
 					if(m.id == id) {
 						m.tags = tags;
 						return;
@@ -582,10 +582,10 @@ Vue.component('search', {
 			if(key == 'arrowdown' || key == 'arrowup') {
 				var rows, next;
 				if(this.what == 'threads') {
-					rows = this.results.threads;
+					rows = this.results.items;
 				}
 				if(this.what == 'messages') {
-					rows = this.results.messages;
+					rows = this.results.items;
 				}
 				if(this.cursor == null) {
 					// no selected element, select first or last depending on the key
@@ -608,9 +608,9 @@ Vue.component('search', {
 
 				var t;
 				if(this.what == 'threads')
-					t = 'thread:' + this.results.threads[this.cursor].id;
+					t = 'thread:' + this.results.items[this.cursor].id;
 				if(this.what == 'messages')
-					t = 'mid:' + this.results.messages[this.cursor].id;
+					t = 'mid:' + this.results.items[this.cursor].id;
 				this.$router.push({
 					name: 'thread',
 					query: {
@@ -657,7 +657,7 @@ Vue.component('search', {
 	template: `
 			<div class="results">
 				<div class="status" v-if="!results">Loading...</div>
-				<div class="status" v-if="results && !((what == 'threads' && results.threads.length) || (what == 'messages' && results.messages.length))">No messages found</div>
+				<div class="status" v-if="results && !((what == 'threads' && results.items.length) || (what == 'messages' && results.items.length))">No messages found</div>
 
 				<div class="pager" v-if="results && results.pages > 1">
 					<span
@@ -683,7 +683,7 @@ Vue.component('search', {
 
 				<table v-if="results && what == 'threads'">
 					<tr
-						v-for="res, idx in results.threads"
+						v-for="res, idx in results.items"
 						:key="res.id"
 						:class="{
 							highlight: 'thread:' + res.id == highlight,
@@ -709,7 +709,7 @@ Vue.component('search', {
 
 				<table v-if="results && what == 'messages'">
 					<tr
-						v-for="res, idx in results.messages"
+						v-for="res, idx in results.items"
 						:key="res.id"
 						:class="{
 							highlight: 'mid:' + res.id == highlight,
